--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,100 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$blogster-primary: mat-palette($mat-indigo);
+$blogster-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$blogster-warn: mat-palette($mat-red);
+
+// Create the theme object (a Sass map containing all of the palettes).
+$blogster-theme: mat-light-theme($blogster-primary, $blogster-accent, $blogster-warn);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($blogster-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Raleway', "Helvetica Neue", sans-serif; }
+
+
+
+// ****Utilities****
+// Margin top
+.mt-1 {
+   margin-top: 1rem;
+}
+.mt-2 {
+    margin-top: 2rem;
+ }
+.mt-3 {
+    margin-top: 3rem;
+}
+.mt-4 {
+    margin-top: 4rem;
+}
+// Margin right
+.mr-1 {
+    margin-right: 1rem;
+ }
+.mr-2 {
+     margin-right: 2rem;
+}
+.mr-3 {
+     margin-right: 3rem;
+}
+.mr-4 {
+     margin-right: 4rem;
+}
+
+// Margin left
+.ml-1 {
+    margin-left: 1rem;
+ }
+.ml-2 {
+    margin-left: 2rem;
+}
+.ml-3 {
+    margin-left: 3rem;
+}
+.ml-4 {
+    margin-left: 4rem;
+}
+
+// Margin bottom
+.mb-1 {
+    margin-bottom: 1rem;
+ }
+.mb-2 {
+    margin-bottom: 2rem;
+}
+.mb-3 {
+    margin-bottom: 3rem;
+}
+.mb-4 {
+    margin-bottom: 4rem;
+}
+
+// Icon spacing
+.mr-icon-min {
+    margin-right: 10px;
+}
+.mat-button-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
