Second Commit - Footer included

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,8 +1,16 @@
 :root {
+    // Primary Colors
     --color-primary-blue: #488cff;
     --color-primary-yellow: #ffde00;
     --color-primary-white: #ffffff;
     --color-primary-orange: #FF9900;
     
+    // Shades
     --color-border-grey: #ccceee;
+
+    // Footer Colors
+    --color-footer-background: #26272b;
+    --color-footer-text: #737373;
+    --color-footer-hr: #bbbbbb;
+
 }
