--- a/src/components/footer/footer.component.scss
+++ b/src/components/footer/footer.component.scss
@@ -93,6 +93,11 @@
                         background-color:#ea4c89;
                         color: var(--color-primary-white);
                     }
+                .github:hover
+                    {
+                        background-color: var(--color-primary-white);
+                        color: #000000;
+                    }
             }
         }
     }
