--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -2,13 +2,13 @@
     <img src="{{ICON_BASE}}blogster-logo.png" alt="" class="header_logo">
     <ul class="header_list">
         <li class="header_item">
-            Home
+            <a routerLink= "/home" routerLinkActive= "active">Home</a>
         </li>
-        <li class="header_item">
-            Login
+        <li class="header_item" routerLinkActive= "active" >
+            <a routerLink= "/auth" routerLinkActive= "active">Login</a>
         </li>
-        <li class="header_item">
-            Contact
+        <li class="header_item" routerLinkActive= "active" >
+            <a routerLink= "/contact" routerLinkActive= "active">Contact</a>
         </li>
     </ul>
 </div>
