--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,53 +20,9 @@
            height: 60rem;
        }
     }
+    
+}
 
-    &_content {
-        & p {
-            margin: 0;
-        }
-    }
-    &_heading {
-        margin: 5rem 0 2rem 0;
-        &--text {
-           font-family: 'Notable';
-           font-size: 6.5rem;
-           border-bottom: 1px solid var(--color-border-grey);
-           display: inline-block;
-           line-height: 9rem;
-           background-image: url("/assets/images/pencils.jpg"); 
-           text-shadow: 2px 4px 3px rgba(0,0,0,0.015);
-           background-repeat: repeat; 
-           -webkit-background-clip: text; 
-           background-clip: text;
-           -webkit-text-fill-color: transparent; 
-        }
-    }
-    &_subheading {
-        margin-bottom: 1rem;
-        &--text {
-            font-size: 2.2rem;
-            line-height: 2.5rem;
-        }
-    }
-    &_para {
-        margin-bottom: 2rem;
-        width: 75%;
-       &--text {
-            font-size: 2.2rem;
-            line-height: 2.5rem;
-            line-height: 1.5rem;
-       }
-    }
-    &_btn--started {
-        margin-top: 1rem;
-        width: 20rem;
-        height: 4rem;
-        border-radius: 50rem;
-        font-size: 1.2rem;
-        background-color: var(--color-primary-blue);
-        color: var(--color-primary-white);
-        font-family: 'Raleway';
-    }
-
+.relative {
+    position: relative;
 }
