--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -58,6 +58,7 @@
                 <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
                 <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
                 <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+                <li><a class ="github" href=""><i class="fab fa-github"></i></a></li>
               </ul>
         </div>
     </div>
