--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -6,7 +6,6 @@
     font-weight: 600;
     letter-spacing: 2px;
     position: relative;
-    width: 68%;
 
     &_list {
         list-style: none;
@@ -15,6 +14,8 @@
         font-size: 1.3rem;
         cursor: pointer;
         margin: 1rem 0;
+        min-height: 3.5rem;
+        align-items: center;
     }
 
     &_logo {
@@ -26,12 +27,20 @@
     }
 
     &_item {
-        padding: 1rem 2rem;
-
-        &:hover {
-            background-color: var(--color-primary-white);;
+        a {
+            text-decoration: none;
+            padding: 1rem 2rem;
+            color: var(--color-primary-white);
+        }
+        a:hover {
+            background-color: var(--color-primary-white);
             color: var(--color-primary-blue);
             transition: all cubic-bezier(1, 0, 0, 1) 0.35s;
         }
     }
+}
+
+.active {
+    background-color: var(--color-primary-white);
+    color: var(--color-primary-blue) !important;
 }
