--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -9,6 +9,7 @@
                 Pariatur soluta nemo in commodi nihil vero,nimi. Beatae.
             </p>
         </div>
+        <hr *ngIf= "isMobile">
         <div class="footer_credits">
             <div class="footer_credits--header heading">
                 Credits
@@ -32,6 +33,7 @@
                 </ul>
             </div>
         </div>
+        <hr *ngIf= "isMobile">
         <div class="footer_links">
             <div class="footer_links--header heading">
                 Quick Links
