--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,28 +1,11 @@
-.landing {
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    
-    &_circle {
-        position: absolute;
-        height: 30rem;
-        width: 30rem;
-        background-color: var(--color-primary-yellow);
-        bottom: 0;
-        right: 0;
-        border-radius: 50%;
-        transform: translate(50%, 50%);
-    }
-    &_image {
-        margin: 1.5rem 7rem 1rem 4rem;
-       &--src {
-           height: 60rem;
-       }
-    }
-    
+.custom-wrapper {
+    padding: 2rem 6rem;
 }
 
-.relative {
-    position: relative;
+@media only screen
+and (max-width: 450px)
+and (orientation: portrait) {
+    .custom-wrapper {
+        padding: 2rem 1rem;
+    }    
 }
