--- a/src/components/footer/footer.component.scss
+++ b/src/components/footer/footer.component.scss
@@ -14,6 +14,7 @@
         font-size: 1.5rem;
         font-weight: 600;
         color: var(--color-primary-white);
+        margin-bottom: 1rem;
     }
     hr {
         border-top-color: var(--color-footer-hr);
@@ -71,6 +72,14 @@
                     margin-right: 1rem;
                     border-radius: 100%;
                     transition: all 0.2s linear;
+                    position: relative;
+
+                    i {
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                    }
                 }
 
                 .facebook:hover
@@ -100,5 +109,35 @@
                     }
             }
         }
+    }
+}
+
+// Media queries for footer
+@media only screen
+and (max-width: 450px)
+and (orientation: portrait) {
+    .footer {
+        padding: 1.5rem 2rem;
+
+        &_upper {
+            flex-direction: column;
+        }
+
+        &_lower {
+            flex-wrap: wrap;
+        }
+    }
+
+    hr {
+        width: 100%;
+        margin-bottom: 1.5rem;
+    }
+
+    .footer_credits--text {
+        width: 90% !important;
+    }
+
+    .footer_about--text {
+        width: 90% !important;
     }
 }
