--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,14 +1,29 @@
-<div class="header mt-3">
-    <img src="{{ICON_BASE}}blogster-logo.png" alt="" class="header_logo">
-    <ul class="header_list">
-        <li class="header_item">
-            <a routerLink= "/home" routerLinkActive= "active">Home</a>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-primary navbar-custom">
+    <a class="navbar-brand">Blogster</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item mr-3">
+          <a class="nav-link" routerLink= "/home" routerLinkActive= "active" >
+            <i class="fas fa-home mr-2"></i>
+            <span>Home</span>
+          </a>
         </li>
-        <li class="header_item" routerLinkActive= "active" >
-            <a routerLink= "/auth" routerLinkActive= "active">Login</a>
+        <li class="nav-item mr-3">
+          <a class="nav-link" routerLink= "/auth" routerLinkActive= "active">
+            <i class="fas fa-sign-in-alt mr-2"></i>
+            <span>Login</span>
+          </a>
         </li>
-        <li class="header_item" routerLinkActive= "active" >
-            <a routerLink= "/contact" routerLinkActive= "active">Contact</a>
+        <li class="nav-item mr-3">
+          <a class="nav-link" routerLink= "/contact" routerLinkActive= "active">
+            <i class="fas fa-phone-alt mr-2"></i>
+            <span>Contact</span>
+          </a>
         </li>
-    </ul>
-</div>
+      </ul>
+    </div>
+  </nav>
