--- a/src/components/home/home.component.scss
+++ b/src/components/home/home.component.scss
@@ -44,3 +44,15 @@
 p {
     margin: 0;
 }
+
+@media only screen
+and (max-width: 450px)
+and (orientation: portrait) {
+    .landing_heading { 
+        margin: 1rem 0 2rem 0;
+
+        &--text {
+            font-size: 4.2rem !important;
+        }
+    }    
+}
