--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="col-sm">
       <div class="container custom-wrapper">
         <div class="row">
-          <div class="col-sm">
+          <div class="col-sm padding-fix">
             <div [@routeAnimations]="prepareRoute(outlet)" >
               <router-outlet #outlet= "outlet"></router-outlet>
             </div>
