--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,10 @@
     padding: 2rem 6rem;
 }
 
+.padding-fix {
+    padding: 0 !important;
+}
+
 @media only screen
 and (max-width: 450px)
 and (orientation: portrait) {
