--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,6 @@
 :root {
     // Primary Colors
-    --color-primary-blue: #488cff;
+    --color-primary-blue: #0069d9;
     --color-primary-yellow: #ffde00;
     --color-primary-white: #ffffff;
     --color-primary-orange: #FF9900;
