--- a/src/components/contact/contact.component.html
+++ b/src/components/contact/contact.component.html
@@ -1,1 +1,53 @@
-<p>contact works!</p>
+<div class="container custom-container">
+    <div class="row custom-row"> 
+        <div class="col-sm left-body">
+            <div class="row custom-row cursive-font mt-3">
+                <div class="col-sm custom-col">
+                    <i class="fas fa-phone-alt"></i>
+                    <div class="info-wrapper">
+                        <span>(+91) 9123270498</span>
+                        <span>(+91) 9163593618</span>
+                    </div>
+                </div>
+            </div>
+            <div class="row custom-row">
+                <div class="col-sm custom-col">
+                    <i class="fas fa-map-marked-alt"></i>
+                    <div class="info-wrapper">
+                        <span>2nd floor, Vidhu Vihar,</span>
+                        <span>Muthuraiyaswami Layout,</span>
+                        <span>Hulimavu, Bangalore</span>
+                        <span>Karnataka, 700101</span>
+                    </div>
+                </div>
+            </div>
+            <div class="row social-row">
+                <div class="col-sm">
+                    <app-social-links></app-social-links>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <button mat-raised-button 
+                    class="mt-3 resume-btn btn btn-primary">
+                    <i class="fas fa-download mr-icon-min"></i>
+                    <span>Download Resume</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm right-body">
+            <div class="mapouter">
+                <div class="gmap_canvas">
+                    <iframe width="600" height="500" id="gmap_canvas" 
+                    src="https://maps.google.com/maps?q=Meenakshi%20mall%2C%20Bangalore&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                   </iframe>
+                   <a href="https://2torrentz.net">
+                   torrentz
+                   </a>
+                </div><style>.mapouter{position:relative;text-align:right;height:500px;width:100%;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style>
+            </div>
+        </div>
+    </div>
+</div>
