--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -54,14 +54,6 @@
                 Copyright © 2017 All Rights Reserved by Blogster.
             </p>
         </div>
-        <div class="footer_social">
-            <ul class="footer_social--icons">
-                <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
-                <li><a class ="github" href=""><i class="fab fa-github"></i></a></li>
-              </ul>
-        </div>
+        <app-social-links></app-social-links>
     </div>
 </div>
