--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,7 +41,7 @@ and (orientation: portrait) {
     }
 }
 
-html, body { height: 100%; }
+html, body { min-height: 100vh; }
 body { margin: 0; font-family: 'Raleway', "Helvetica Neue", sans-serif; }
 
 
