Create Post section added

--- a/src/components/profile/about/about.component.html
+++ b/src/components/profile/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid card-container override-scroll">
     <div class="about-title">
         <div class="title-wrapper">
             <hr>
