--- a/src/components/profile/post/post.component.html
+++ b/src/components/profile/post/post.component.html
@@ -1,1 +1,19 @@
-<p>post works!</p>
+<div class="container-fluid card-container override-scroll">
+    <!-- <img src="{{ ICON_BASE }}Page-Turner.svg"> -->
+    <div class="image-background"></div>
+    <hr>
+    <div class="posts-wrapper">
+        <div class="title">
+            <hr>
+            <span>CREATE</span>
+        </div>
+        <form [formGroup]= "postForm" (ngSubmit)= "submit()">
+            <mat-form-field appearance="fill">
+                <mat-label>Enter Title Here</mat-label>
+                <input formControlName= "title" matInput>
+            </mat-form-field>
+            <ckeditor [editor]="Editor" formControlName= "body"></ckeditor>
+            <button mat-raised-button type="button">Submit</button>
+        </form>
+    </div>
+</div>
