--- a/src/styles.scss
+++ b/src/styles.scss
@@ -115,3 +115,43 @@ button:focus {
     justify-content: center;
     align-items: center;
 }
+
+.card-container {
+    height: 42.3rem;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: 8px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+::-webkit-scrollbar-track
+{
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 5px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+    width: 9px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+    border-radius: 5px;
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+}
+
+.override-scroll {
+    overflow: hidden;
+}
+
+@media only screen
+and (max-width: 450px)
+and (orientation: portrait) {
+    .card-container {
+        margin-bottom: 2rem;
+    }
+}
