Added blog dialog box

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   <ng-container *ngIf= "!isLoggedIn">
     <div class="row">
       <div class="col-sm">
-        <img class="img-fluid" src="{{ICON_BASE}}background_cropped.jpg">
+        <img class="img-fluid" src="{{ICON_BASE}}human-with-laptop.jpg">
       </div>
       <div class="col-sm">
         <div class="container custom-wrapper">
