--- a/src/components/profile/profile.component.scss
+++ b/src/components/profile/profile.component.scss
@@ -41,6 +41,17 @@
     margin-top: 5rem;
 }
 
+.dynamic-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    z-index: 5;
+    overflow: hidden;
+}
+body {
+    overflow: hidden;
+}
 @media only screen
 and (max-width: 450px)
 and (orientation: portrait) {
