--- a/src/components/auth/auth.component.html
+++ b/src/components/auth/auth.component.html
@@ -3,7 +3,7 @@
     <mat-tab-group>
         <mat-tab label="Login">
             <div class="login-logo">
-                <img class = "login-logo_image" src="{{ICON_BASE}}login.svg">
+                <img class = "login-logo_image" src="{{ICON_BASE}}user-login.svg">
                 <div class="credit">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">
                     Freepik
                 </a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
