--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,6 +1,6 @@
 
-<nav class="navbar navbar-expand-lg navbar-light bg-primary navbar-custom">
-    <a class="navbar-brand"><i class="fas fa-blog"></i></a>
+<nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-custom">
+    <i class="brand fas fa-blog"></i>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
