--- a/src/components/home/home.component.scss
+++ b/src/components/home/home.component.scss
@@ -6,7 +6,7 @@
        border-bottom: 1px solid var(--color-border-grey);
        display: inline-block;
        line-height: 9rem;
-       background-image: url("/assets/images/pencils.jpg"); 
+       background-image: url("/assets/images/color-pencils.jpg"); 
        text-shadow: 2px 4px 3px rgba(0,0,0,0.015);
        background-repeat: repeat; 
        -webkit-background-clip: text; 
