Image cropper added

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,4 +12,7 @@ and (orientation: portrait) {
     .custom-wrapper {
         padding: 2rem 1rem;
     }    
+    .animation-wrapper {
+        min-height: 30rem;
+    }
 }
