--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,5 +1,6 @@
-<!--Heading-->
-<div class="landing_heading">
+<div class="home-wrapper">
+  <!--Heading-->
+  <div class="landing_heading">
     <p class="landing_heading--text">
       Blogster
     </p>
@@ -23,3 +24,4 @@
   mat-raised-button (click)= "navigate()">
   <span class="mr-icon-min"> Get Started </span> <i class="fas fa-chevron-right"></i>
   </button>
+</div>
