--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,6 +4,7 @@
     --color-primary-yellow: #ffde00;
     --color-primary-white: #ffffff;
     --color-primary-orange: #FF9900;
+    --color-teams-blue: #6264A7;
     
     // Shades
     --color-border-grey: #ccceee;
@@ -12,5 +13,8 @@
     --color-footer-background: #26272b;
     --color-footer-text: #737373;
     --color-footer-hr: #bbbbbb;
+
+    // Breakpoints
+    --mobile: 450px;
 
 }
