--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <div class="col-sm">
         <div class="container custom-wrapper">
           <div class="row">
-            <div class="col-sm padding-fix">
+            <div class="col-sm padding-fix animation-wrapper">
               <div [@routeAnimations]="prepareRoute(outlet)" >
                 <router-outlet #outlet= "outlet"></router-outlet>
               </div>
