--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -48,3 +48,13 @@
 
 // For toggler to be white
 .navbar-light .navbar-toggler-icon { 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.9)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); }
+
+// Media Queries
+@media screen and (max-width: 450px) {
+    .navbar-nav {
+        margin-top: 1.2rem;
+    }
+    .brand {
+        margin-top: 3px;
+    }
+}
