--- a/src/styles.scss
+++ b/src/styles.scss
@@ -148,6 +148,10 @@ button:focus {
     overflow: hidden;
 }
 
+.mat-dialog-container {
+    padding: 15px !important;
+}
+
 @media only screen
 and (max-width: 450px)
 and (orientation: portrait) {
