--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,6 +4,7 @@
     --color-primary-yellow: #ffde00;
     --color-primary-white: #ffffff;
     --color-primary-orange: #FF9900;
+    --color-primary-green: #41a85f;
     --color-teams-blue: #6264A7;
     
     // Shades
