--- a/src/components/auth/auth.component.scss
+++ b/src/components/auth/auth.component.scss
@@ -1,6 +1,7 @@
 .auth-wrapper {
     margin-top: 3rem;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    width: 80%;
 
     .form-content-wrapper {
         padding: 3rem 4rem;
@@ -61,5 +62,29 @@
         margin-top: 2rem;
         background-color: #5cb85c;
         color: #ffffff;
+    }
+    .loader-wrapper {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        z-index: 5;
+        background-color: #ffffff;
+        .loader {
+            height: 7rem;
+            position: absolute;
+            z-index: 10;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+}
+
+// Media queries for footer
+@media only screen
+and (max-width: 450px)
+and (orientation: portrait) {
+    .auth-wrapper {
+        width: 100%;
     }
 }
