--- a/src/components/profile/profile.component.html
+++ b/src/components/profile/profile.component.html
@@ -41,3 +41,11 @@
 <ng-template #fullPicView>
     <img src="https://sunrift.com/wp-content/uploads/2014/12/Blake-profile-photo-square.jpg" class="dp-fullview img-fluid">
 </ng-template>
+
+<ng-template #profileUploadError>
+    <h1 mat-dialog-title>File Upload Error</h1>
+    <div mat-dialog-content>This dialog showcases the title, close, content and actions elements.</div>
+    <div mat-dialog-actions>
+    <button mat-button mat-dialog-close>Close</button>
+    </div>
+</ng-template>
