--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,16 +94,16 @@ button:focus {
 
 // Margin bottom
 .mb-1 {
-    margin-bottom: 1rem;
+    margin-bottom: 1rem !important;
  }
 .mb-2 {
-    margin-bottom: 2rem;
+    margin-bottom: 2rem !important;
 }
 .mb-3 {
-    margin-bottom: 3rem;
+    margin-bottom: 3rem !important;
 }
 .mb-4 {
-    margin-bottom: 4rem;
+    margin-bottom: 4rem !important;
 }
 
 // Icon spacing
