--- a/src/components/auth/auth.component.html
+++ b/src/components/auth/auth.component.html
@@ -33,7 +33,7 @@
                     </div>
 
                     <div class="fomr-btn">
-                        <button mat-raised-button type="submit" (click)= "testProfile()">Login</button>
+                        <button mat-raised-button type="submit">Login</button>
                     </div>
                 </form>
             </div>
