--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -6,22 +6,28 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item mr-3">
+        <li class="nav-item mr-3" *ngIf= "!isAuthenticated">
           <a class="nav-link" routerLink= "/home" routerLinkActive= "active" >
             <i class="fas fa-home mr-2"></i>
             <span>Home</span>
           </a>
         </li>
-        <li class="nav-item mr-3">
+        <li class="nav-item mr-3" *ngIf= "!isAuthenticated">
           <a class="nav-link" routerLink= "/auth" routerLinkActive= "active">
             <i class="fas fa-sign-in-alt mr-2"></i>
             <span>Login</span>
           </a>
         </li>
-        <li class="nav-item mr-3">
+        <li class="nav-item mr-3" *ngIf= "!isAuthenticated">
           <a class="nav-link" routerLink= "/contact" routerLinkActive= "active">
             <i class="fas fa-phone-alt mr-2"></i>
             <span>Contact</span>
+          </a>
+        </li>
+        <li class="nav-item mr-3" *ngIf= "isAuthenticated" style="cursor: pointer;" (click)= "logout()">
+          <a class="nav-link">
+            <i class="fas fa-sign-out-alt mr-2"></i>
+            <span>Logout</span>
           </a>
         </li>
       </ul>
