--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <app-header></app-header>
 <div class="container-fluid">
-  <ng-container *ngIf= "isAuthenticated">
+  <ng-container *ngIf= "isAuthenticated && !pageNotFound">
     <router-outlet></router-outlet>
   </ng-container>
 
-  <ng-container *ngIf= "!isAuthenticated">
+  <ng-container *ngIf= "pageNotFound">
+    <router-outlet></router-outlet>
+  </ng-container>
+
+  <ng-container *ngIf= "!isAuthenticated && !pageNotFound">
     <div class="row">
       <div class="col-sm">
         <img class="img-fluid" src="{{ICON_BASE}}human-with-laptop.jpg">
