--- a/src/components/profile/about/about.component.html
+++ b/src/components/profile/about/about.component.html
@@ -84,7 +84,7 @@
             </div>
         </div>
     </div>
-    <hr style="margin-top: 5px;">
+    <hr style="margin-top: 5px; margin-bottom: 2rem;">
     <div class="profile-edit">
         <i class="far fa-edit"></i>
         <span>Edit</span>
