--- a/src/components/profile/about/about.component.scss
+++ b/src/components/profile/about/about.component.scss
@@ -1,5 +1,6 @@
 .card-container {
-    // overflow-y: scroll !important;
+    overflow-y: auto !important;
+    padding-bottom: 2rem;
 }
 .about-title {
     font-size: 1.6rem;
