--- a/src/components/profile/profile.component.html
+++ b/src/components/profile/profile.component.html
@@ -25,7 +25,7 @@
     <div class="details-wrapper">
         <div class="row">
             <div class="col-sm-3">
-                <app-about></app-about>
+                <app-about [profileInfo]= "userInfo"></app-about>
             </div>
             <div class="col-sm-5">
                 <app-blogs></app-blogs>
