--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,7 @@
 <app-header></app-header>
 <div class="container-fluid">
-  <ng-container *ngIf= "isAuthenticated && !pageNotFound">
+  <ng-container>
     <router-outlet></router-outlet>
-  </ng-container>
-
-  <ng-container *ngIf= "pageNotFound">
-    <router-outlet></router-outlet>
-  </ng-container>
-
-  <ng-container *ngIf= "!isAuthenticated && !pageNotFound">
-    <div class="row">
-      <div class="col-sm">
-        <img class="img-fluid" src="{{ICON_BASE}}human-with-laptop.jpg">
-      </div>
-      <div class="col-sm">
-        <div class="container custom-wrapper">
-          <div class="row">
-            <div class="col-sm padding-fix animation-wrapper">
-              <div [@routeAnimations]="prepareRoute(outlet)" >
-                <router-outlet #outlet= "outlet"></router-outlet>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </ng-container>
 </div>
 <app-footer></app-footer>
