--- a/src/components/generic-message/generic-message.component.scss
+++ b/src/components/generic-message/generic-message.component.scss
@@ -7,7 +7,7 @@
         font-size: 4rem;
     }
     .fa-times-circle {
-        color: red;
+        color: #dc3545;
     }
     .fa-check-circle {
         color: #00FF00;
