--- a/src/components/prelogin/auth/auth.component.scss
+++ b/src/components/prelogin/auth/auth.component.scss
@@ -54,6 +54,11 @@
         font-family: 'Raleway';
     }
 
+    .mat-radio-button {
+        font-family: Raleway;
+        font-size: 1.1rem;
+    }
+
     .mat-raised-button {
         display: block;
         width: 100%;
