--- a/src/components/profile/post/post.component.scss
+++ b/src/components/profile/post/post.component.scss
@@ -37,6 +37,11 @@
     margin-bottom: 1.5px;
     background-repeat: no-repeat;
 }
+.custom-alert {
+    padding: 0.6rem;
+    margin-top: 2rem;
+    border-radius: 0;
+}
 .posts-wrapper {
     padding: 8px;
 
