--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -8,25 +8,25 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item mr-3" *ngIf= "!isAuthenticated">
           <a class="nav-link" [routerLink]= "['']" [ngClass]= "{ 'active': routePath === '/' }" >
-            <i class="fas fa-home mr-2"></i>
+            <i class="fas fa-home mr-half"></i>
             <span>Home</span>
           </a>
         </li>
         <li class="nav-item mr-3" *ngIf= "!isAuthenticated">
           <a class="nav-link" [routerLink]= "['auth']" routerLinkActive= "active">
-            <i class="fas fa-sign-in-alt mr-2"></i>
+            <i class="fas fa-sign-in-alt mr-half"></i>
             <span>Login</span>
           </a>
         </li>
         <li class="nav-item mr-3" *ngIf= "!isAuthenticated">
           <a class="nav-link" [routerLink]= "['contact']" routerLinkActive= "active">
-            <i class="fas fa-phone-alt mr-2"></i>
+            <i class="fas fa-phone-alt mr-half"></i>
             <span>Contact</span>
           </a>
         </li>
         <li class="nav-item mr-3" *ngIf= "isAuthenticated" style="cursor: pointer;" (click)= "logout()">
           <a class="nav-link">
-            <i class="fas fa-sign-out-alt mr-2"></i>
+            <i class="fas fa-sign-out-alt mr-half"></i>
             <span>Logout</span>
           </a>
         </li>
