--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -31,6 +31,9 @@
 .navbar {
     padding: 0.85rem !important;
 }
+.mr-half {
+    margin-right: 0.5rem;
+}
 .brand {
     font-size: 2.3rem;
     margin-left: 1rem !important;
