--- a/src/components/prelogin/auth/auth.component.html
+++ b/src/components/prelogin/auth/auth.component.html
@@ -45,7 +45,7 @@
             <div class="form-content-wrapper">
                 <form #signupFormRef= "ngForm" [formGroup]= "signupForm" (ngSubmit)= "submitSignupForm()">
 
-                    <div class="control mb-2">
+                    <div class="control mb-1">
                         <mat-form-field appearance="fill">
                             <mat-label>Enter your name</mat-label>
                             <input formControlName= "name" matInput>
@@ -53,7 +53,7 @@
                         </mat-form-field>
                     </div>
 
-                    <div class="control mb-2">
+                    <div class="control mb-1">
                         <mat-form-field appearance="fill">
                             <mat-label>Enter your email</mat-label>
                             <input formControlName= "email" matInput>
@@ -61,7 +61,7 @@
                         </mat-form-field>
                     </div>
                     
-                    <div class="control mb-2">
+                    <div class="control mb-1">
                         <mat-form-field appearance="fill">
                             <mat-label>Enter your password</mat-label>
                             <input formControlName= "password" matInput [type]="hide ? 'password' : 'text'">
@@ -71,6 +71,27 @@
                             <mat-error>{{ getErrorMessage('password') }}</mat-error>
                         </mat-form-field>
                     </div>
+
+                    <div class="control mb-1">
+                        <!-- <mat-form-field appearance="fill">
+                            <mat-label>Date of birth</mat-label>
+                            <input formControlName= "dob" matInput [matDatepicker]="picker" [min]= "minDate" [max]= "maxDate" disabled>
+                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                            <mat-datepicker #picker></mat-datepicker>
+                        </mat-form-field> -->
+
+                        <mat-form-field appearance="fill">
+                            <mat-label>Date of birth ( MM/DD/YYYY )</mat-label>
+                            <input formControlName= "dob" matInput [matDatepicker]="dp3" [min]= "minDate" [max]= "maxDate" disabled>
+                            <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
+                            <mat-datepicker #dp3 disabled="false"></mat-datepicker>
+                        </mat-form-field>
+                    </div>
+
+                    <mat-radio-group formControlName= "gender" class="mb-1" aria-label="Gender">
+                        <mat-radio-button class="mr-1" value="Male">Male</mat-radio-button>
+                        <mat-radio-button value="Female">Female</mat-radio-button>
+                    </mat-radio-group>
 
                     <div class="fomr-btn">
                         <button mat-raised-button type="submit" [disabled]= "signupForm.invalid">Signup</button>
