--- a/src/components/profile/blog/blog.component.html
+++ b/src/components/profile/blog/blog.component.html
@@ -3,6 +3,6 @@
     <div class="wrapper-2">
         <h2>{{ title }}</h2>
         <hr>
-        {{ body }}
+        <div [innerHtml]= "content">
     </div>
 </div>
