--- a/src/components/profile/blogs/blogs.component.html
+++ b/src/components/profile/blogs/blogs.component.html
@@ -1,39 +1,38 @@
-<div class="container-fluid card-container">
-    <div class="blogs-wrapper">
-        <div class="row">
-            <mat-slide-toggle (input)= "sliderChanged()">Show only my blogs!</mat-slide-toggle>
-        </div>
+<div class="search-results">
+<div class="container-fluid card-container" #c>
+    <div class="blogs-wrapper" *ngIf= "blogsFetched">
         <div class="blogs">
-            <div class="blog" *ngFor= "let blog of blogs">
-                <div class="blog_title">
-                    {{ blog.title }}
-                </div>
-                <hr>
-                <div class="blog_body">
-                    {{ blog.body | shorten: alphabetCount }}
-                    <span class="view-more" (click)= "viewMore(blog)"
-                    *ngIf= "blog.body.length > alphabetCount">
-                        VIEW MORE
-                        <i class="fas fa-angle-double-right"></i>
-                    </span>
-                </div>
-                <hr>
-                <div class="blog_footer row">
-                    <div class="col-sm-2 icon-wrapper">
-                        <i class="fas fa-thumbs-up like"></i>
-                        <span>{{ blog.like }}</span>
+                <div class="blog" *ngFor= "let blog of blogs">
+                    <div class="blog_title">
+                        {{ blog.title }}
                     </div>
-                    <div class="col-sm-1 icon-wrapper">
-                        <i class="fas fa-heart love"></i>
-                        <span>{{ blog.love }}</span>
+                    <hr>
+                    <div class="blog_body">
+                        <div class="c_wrapper" [innerHtml]= "blog.content | shorten: alphabetCount">
+                        </div>
+                        <span class="view-more" (click)= "viewMore(blog)"
+                        *ngIf= "blog.content.length > alphabetCount">
+                            VIEW MORE
+                            <i class="fas fa-angle-double-right"></i>
+                        </span>
                     </div>
-                    <div class="col-sm-9">
-                        <div class="blog_footer_author">
-                            by {{ blog.author }}
+                    <hr>
+                    <div class="blog_footer row">
+                        <div class="col-sm-2 icon-wrapper">
+                            <i class="fas fa-thumbs-up like" [ngStyle]= "{'color': blog.liked ? '#0069d9' : '#999999'}" (click) = "toggleLike(blog)"></i>
+                            <span>{{ blog.like }}</span>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="h-loader" *ngIf= "showScrollLoader">
+                <img src="{{ICON_BASE}}hLoader.svg">
+            </div>
+            <mat-paginator [length]="dataLength"
+               [pageSize]="pageSize"
+               [pageSizeOptions]="pageSizeOptions"
+               (page)="pageEvent($event)">
+            </mat-paginator>
         </div>
     </div>
 </div>
