--- a/src/components/profile/blogs/blogs.component.scss
+++ b/src/components/profile/blogs/blogs.component.scss
@@ -16,6 +16,11 @@
         .blogs {
             margin-top: 2rem;
 
+            .search-results {
+                height: 100%;
+                overflow-y: scroll;
+            }
+
             .blog {
                 padding: 1rem;
                 box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -28,6 +33,9 @@
                 }
 
                 &_body {
+                    .c_wrapper {
+                        word-wrap: break-word;
+                    }
                     .view-more {
                         text-decoration: underline;
                         color: dodgerblue;
@@ -41,15 +49,10 @@
                         cursor: pointer;
                         transition: all 0.2s;
                         margin-right: 5px;
+                        color: #999999;
                         &:hover {
                             transform: scale(1.3);
                         }
-                    }
-                    .like {
-                        color: var(--color-primary-blue);
-                    }
-                    .love {
-                        color: red;
                     }
 
                     .icon-wrapper {
@@ -60,9 +63,31 @@
                         float: right;
                         font-style: italic;
                         color: #aaa;
+                        cursor: pointer;
+
+                        &:hover {
+                            text-decoration: underline;
+                        }
                     }
                 }
             }
         }
+
+        .h-loader {
+            min-height: 7rem;
+            img {
+                height: 5rem;
+                margin: auto;
+                display: inherit;
+            }
+        }
     }
+}
+.mat-paginator {
+    font-size: 1rem;
+    font-family: 'Raleway';
+}
+::ng-deep .mat-select-value-text {
+    font-size: 1rem;
+    font-family: 'Raleway';
 }
