--- a/src/components/profile/post/post.component.html
+++ b/src/components/profile/post/post.component.html
@@ -1,19 +1,24 @@
 <div class="container-fluid card-container override-scroll">
-    <!-- <img src="{{ ICON_BASE }}Page-Turner.svg"> -->
     <div class="image-background"></div>
     <hr>
-    <div class="posts-wrapper">
+    <div class = "loader" *ngIf= "loading">
+        <img src = "{{ICON_BASE}}loader.svg">
+    </div>
+    <div class="posts-wrapper" *ngIf= "!loading">
         <div class="title">
             <hr>
             <span>CREATE</span>
         </div>
-        <form [formGroup]= "postForm" (ngSubmit)= "submit()">
+        <form #createFormRef = "ngForm" [formGroup]= "postForm" (ngSubmit)= "submit()">
             <mat-form-field appearance="fill">
                 <mat-label>Enter Title Here</mat-label>
                 <input formControlName= "title" matInput>
             </mat-form-field>
-            <ckeditor [editor]="Editor" formControlName= "body"></ckeditor>
-            <button mat-raised-button type="button">Submit</button>
+            <ckeditor [editor]="Editor" formControlName= "content"></ckeditor>
+            <button *ngIf= "!loading && !showSuccessMessage" mat-raised-button>Submit</button>
+            <div class="alert alert-success custom-alert" role="alert" *ngIf= "showSuccessMessage && !loading">
+                Your post has been submitted successfully !
+            </div>
         </form>
     </div>
 </div>
