--- a/src/components/profile/profile.component.scss
+++ b/src/components/profile/profile.component.scss
@@ -13,78 +13,76 @@
         box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
         .cover-inner {
             min-height: 15rem;
-            background-image: url('/assets/images/demo-cover.svg');
+            position: relative;
+            background-size: cover;
+            &:hover .dp-overlay {
+                display: flex;
+                background-color: rgba(0,0,0,0.5);
+                cursor: pointer;
+            }
         }
     }
 
     .profile-picture {
-        padding: 4px;
-        background-color: #fff;
-        height: 11rem;
-        width: 11rem;
+        background-color: transparent;
         position: absolute;
-        top: 50%;
-        border-radius: 50%;
+        top: 45%;
         left: 5%;
-        box-shadow: 0 4px 7px #e6e6e6;
         transform: translateY(0.5rem);
         overflow: hidden;
-
+        display: flex;
+        color: white;
+        min-height: 12rem;
         img {
-            height: 100%;
+            height: 11.5rem;
+            width: 11.5rem;
             border-radius: 50%;
-            width: 100%;
+            box-shadow: 0 4px 7px #ccc;
+            border: 5px solid white;
+            cursor: pointer;
+            margin-right: 1rem;
         }
 
-        .dp-overlay-wrapper {
-            .dp-overlay {
-                position: absolute;
-                height: 11rem;
-                width: 12rem;
-                background-color: black;
-                opacity: 0.5;
-                top: 0;
-                left: -1rem;
+        .short-info {
+            align-self: center;
+            &--name {
+                font-size: 1.5rem;
+                text-transform: capitalize;
             }
-            .dp-options {
-                position: absolute;
-                top: 65%;
-                color: #fff;
-                text-decoration: underline;
-                text-align: center;
-                left: 50%;
-                width: 100%;
-                transform: translate(-50%, -50%);
-                font-weight: 500;
-                cursor: pointer;
-    
-                & div:first-child {
-                    margin-bottom: 3px;
-                }
-            }
-            .fake-file-upload {
-                opacity: 0;
-                height: 1px;
-            }
-        }
-
-        .dp-overlay-wrapper:not(:hover) {
-            opacity: 0;
-            transition: all 0.3s;
-        }
-        .dp-overlay-wrapper:hover {
-            opacity: 1;
-            transition: all 0.3s;
         }
     }
 }
 
+.dp-wrapper {
+    height: 30rem;
+    width: 30rem;
+    position: relative;
+    &:hover .dp-overlay {
+        display: flex;
+        background-color: rgba(0,0,0,0.5);
+        cursor: pointer;
+    }
+}
 .dp-fullview {
-    max-height: 40rem;
+    height: 100%;
+    width: 100%;
+}
+.dp-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3rem;
+    color: white;
+    font-weight: 500;
 }
 
 .details-wrapper {
-    margin-top: 5rem;
+    margin-top: 4rem;
 }
 
 .dynamic-container {
@@ -97,6 +95,15 @@
 }
 body {
     overflow: hidden;
+}
+
+.fake-file-upload {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 @media only screen
 and (max-width: 450px)
