--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,16 +66,16 @@ button:focus {
 }
 // Margin right
 .mr-1 {
-    margin-right: 1rem;
+    margin-right: 1rem !important;
  }
 .mr-2 {
-     margin-right: 2rem;
+     margin-right: 2rem !important;
 }
 .mr-3 {
-     margin-right: 3rem;
+     margin-right: 3rem !important;
 }
 .mr-4 {
-     margin-right: 4rem;
+     margin-right: 4rem !important; 
 }
 
 // Margin left
@@ -122,6 +122,18 @@ button:focus {
     overflow-x: hidden;
     padding: 8px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+
+    img {
+        height: 6rem;
+    }
 }
 
 ::-webkit-scrollbar-track
